# robot.cpp

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  NOTICE  README.md  README_ZH.md  README_zh.md  local_env.sh  local_env.sh.example  note.txt
.github/workflows/: checks.yml
debug/: compare_smolvla_m7_actions.py  run_new.sh  smolvla_benchmark_mac.sh  smolvla_common.sh  smolvla_m7_correctness_mac.sh
docs/models/: pi0.md
eval/: HOW_TO_ADD_NEW_SIM.md  HOW_TO_ADD_NEW_SIM_ZH.md  HOW_TO_ADD_NEW_SIM_zh.md  README.md  README_ZH.md  __init__.py  base_platform.py  common.py  compare_results.py  eval-libero-sim-lerobot.py  eval-libero-sim-vlacpp-lerobot-env.py  model_server_policy.py  readme_zh.md  run_lerobot_baseline.py  run_libero_server_eval.py  summarize-libero-timing.py
eval/lerobot_so101/: README.md  README_ZH.md  README_zh.md  camera_setup.md  environment.yaml  requirements-macos-realsense.txt  run_sync.py  setup_camera_en.md  setup_camera_zh.md  setup_robot_en.md  setup_robot_zh.md  so101_client.py  sync_loop.py
eval/libero/: README.md  README_ZH.md  README_zh.md  __init__.py  benchmark_lerobot.py  benchmark_lerobot_policy.py  benchmark_model_server.py  benchmark_model_server_policy.py  client.py  compare_results.py  env.py  environment.py  environment.yaml  model_server.py  model_server_policy.py  run_lerobot.py  run_lerobot_baseline.py  run_model_server.py  run_model_server.sh  run_model_server_eval.py  run_model_server_eval.sh  utils.py
eval/pi0/: README.md  __init__.py  compare_libero_first_action.py  defaults.py  model_server_policy.py  run_libero_server_eval.py
examples/lerobot_client/: README.md  pyproject.toml
examples/lerobot_client/configs/cameras/: front.json
examples/lerobot_client/configs/dataset/: record_default.yaml
examples/lerobot_client/configs/inference/: async_client.yaml  async_server.yaml  smolvla_cpp.yaml
examples/lerobot_client/configs/robot/: so101_leader.yaml
examples/lerobot_client/docs/: local_commands.md
examples/lerobot_client/scripts/: record_dataset.sh  run_async_policy_server.sh  run_async_robot_client.sh  run_robot_client.sh  run_test_smolvla_loop.sh
examples/lerobot_client/scripts/lib/: so101_env.sh
examples/lerobot_client/src/lerobot_camera_crop/lerobot_camera_crop/: camera.py
examples/lerobot_client/src/vlacpp_lerobot/async_inference/: client.py  config.py  server.py
examples/lerobot_client/src/vlacpp_lerobot/bridge/: smolvla_client.py  vlacpp_tcp.py
examples/lerobot_client/src/vlacpp_lerobot/client/: app.py  robot_sync.py
examples/lerobot_client/src/vlacpp_lerobot/utils/: robot.py
examples/pi0-cli/: main.cpp
include/: vlacpp.h
python/vlacpp/: __init__.py
reports/: vlacpp_libero_timing_analysis.md  vlacpp_v1_performance.md
robot_client/: README.md  README_ZH.md  README_zh.md
robot_client/base_policy/: __init__.py  __main__.py  base_policy.py  run_sync.py  sync_loop.py
robot_client/cpp/: model_client.cpp  model_client.h
robot_client/policy/: __init__.py  base_policy.py  sim_policy.py  sync_loop.py
robot_client/shell/: client_example.sh  cpp_client_example.sh
robot_server/: README.md  README_ZH.md  README_zh.md  model-server.cpp  model_adapter.cpp  model_adapter.h  protocol.cpp  protocol.h  session.cpp  session.h  smolvla-server.cpp  smolvla_protocol.cpp  smolvla_protocol.h  socket.cpp  socket.h  vla_policy.cpp  vla_policy.h
robot_server/examples/: minimal_predict.py
robot_server/examples/python/lerobot_so101/: README.md  lerobot_entry.py  lerobot_sync.py  pyproject.toml  so101_client.py  sync_client.py
robot_server/examples/python/lerobot_so101/camera/: pyproject.toml
robot_server/examples/python/lerobot_so101/camera/camera/: __init__.py  camera.py
robot_server/examples/python/lerobot_so101/camera/camera_test/: run_camera_test.sh  test_camera.py
robot_server/examples/python/lerobot_so101/configs/cameras/: default.yaml  front.json
robot_server/examples/python/lerobot_so101/configs/inference/: smolvla_cpp.yaml
robot_server/examples/python/lerobot_so101/configs/robot/: so101_follower.yaml
robot_server/examples/python/lerobot_so101/docs/: local_commands.md
robot_server/examples/python/lerobot_so101/scripts/: calibrate_follower.sh  calibrate_leader.sh  record_dataset.sh  run_robot_client.sh  teleoperate.sh
robot_server/examples/python/lerobot_so101/scripts/lib/: run_lerobot_cli.py  so101_env.sh
robot_server/examples/python/lerobot_so101/shell/: calibrate_follower.sh  calibrate_leader.sh  record_dataset.sh  run_robot_client.sh  so101_env.sh  teleoperate.sh
robot_server/examples/python/lerobot_so101/src/lerobot_camera_crop/: pyproject.toml
robot_server/examples/python/lerobot_so101/src/lerobot_camera_crop/lerobot_camera_crop/: __init__.py  config.py
robot_server/examples/python/lerobot_so101/src/lerobot_client/: __init__.py
robot_server/examples/python/lerobot_so101/src/lerobot_client/bridge/: __init__.py  smolvla.py
robot_server/examples/python/lerobot_so101/src/lerobot_client/client/: app.py  robot_sync.py
robot_server/examples/python/lerobot_so101/src/lerobot_client/utils/: robot.py
robot_server/examples/python/lerobot_so101/test/: run_camera_test.sh  run_loop_test.sh  test_camera.py  test_loop_predict.py
robot_server/examples/python/lerobot_so101/utils/: robot.py
robot_server/shell/: client_example.sh  cpp_client_example.sh  launch_pi0_server_cpu.sh  launch_robot_server_linux_cpu.sh  launch_robot_server_linux_cuda.sh  launch_robot_server_mac_cpu.sh  launch_robot_server_mac_metal.sh  (+2 more)
src/: README.md  README_ZH.md  model-cli.cpp  readme.md  readme_zh.md
tests/: action-head-checkpoint.json  check_cli_actions.py  check_gguf_tensors.py  check_require_full.py  compare_action_head_reference.py  make_action_head_safetensors.py  make_fake_pi0_components.py  test_gguf_core.cpp  test_mtmd_api.cpp  test_pi0_action_expert.cpp  test_python_api.py  test_runtime.cpp
tools/: README.md  README_ZH.md  README_zh.md  convert-openpi-to-gguf.py  gguf_writer.py  inspect-gguf.py  inspect-safetensors.py  map-openpi-tensors.py
(+193 files in other folders)
