[build-system]
requires = ["setuptools>=71.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-so101-client"
version = "0.1.0"
description = "Minimal LeRobot SO101 client for vla.cpp SmolVLA TCP robot server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.9.0,<4.14.0",
]

[project.optional-dependencies]
robot = [
    "pyserial>=3.5,<4.0",
    "feetech-servo-sdk>=1.0.0,<2.0.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
lerobot-so101-client = "lerobot_client.client.robot_sync:main"

[tool.setuptools.packages.find]
where = ["src"]
