[build-system]
requires = ["setuptools>=71.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_camera_crop"
version = "0.1.0"
description = "LeRobot camera plugin: OpenCV capture with center-crop + resize"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.9.0,<4.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_camera_crop*"]
